Initial page for 3d scanner

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -16,6 +16,8 @@ html(lang="en")
                 a(href="index.html") Home
               li(class=(active == 'getting-started' ? 'active' : ''))
                 a(href="getting-started.html") Getting Started                
+              li(class=(active == '3d-scanner' ? 'active' : ''))
+                a(href="3d-scanner.html") 3D Scanner
               li.dropdown(class=(active == 'examples' ? 'active' : ''))
                 a.dropdown-toggle(href="#",data-toggle="dropdown") Example Wirings 
                   b.caret
