--- a/views/3d-scanner.jade
+++ b/views/3d-scanner.jade
@@ -13,6 +13,26 @@ header#overview
             i.icon-refresh
             |  Connect to Arduino
         .btn-group
+          a.btn(href="#")#elevator-up-btn
+            i.icon-arrow-up
+            |  Elevator Up
+          a.btn(href="#")#elevator-down-btn
+            i.icon-arrow-down
+            |  Elevator Down
+          a.btn(href="#")#elevator-jog-up-btn
+            i.icon-arrow-up
+            |  Elevator Jog Up
+          a.btn(href="#")#elevator-jog-down-btn
+            i.icon-arrow-down
+            |  Elevator Jog Down
+        .btn-group
+          a.btn(href="#")#platform-start-btn
+            i.icon-play
+            |  Platform Start
+          a.btn(href="#")#platform-stop-btn
+            i.icon-stop
+            |  Platform Stop
+        .btn-group
           input.range#interval-slide(type="range", min="0", max="255", step="1", value="0")
 
   .row.info#connection-status
