Added stop button and extra logging

--- a/views/3d-scanner.jade
+++ b/views/3d-scanner.jade
@@ -13,6 +13,12 @@ header#overview
             i.icon-refresh
             |  Connect to Arduino
         .btn-group
+          a.btn(href="#")#elevator-home-btn
+            i.icon-home
+            |  Home
+          a.btn(href="#")#elevator-stop-btn
+            i.icon-stop
+            |  Elevator Stop
           a.btn(href="#")#elevator-up-btn
             i.icon-arrow-up
             |  Elevator Up
