--- a/views/3d-scanner.jade
+++ b/views/3d-scanner.jade
@@ -1,59 +1,53 @@
-header#overview
-  .page-header
-    h1 3D Scanner
-      small  Control the 3D scanner
-  .page-header
-    h1 HTML5 WebSocket Interface
-      small Using Socket.IO and Node.js
-  .row.interface#controls
-    .span12
-      .btn-toolbar(style="margin-bottom: 9px")
-        .btn-group
-          a.btn(href="#")#connect
-            i.icon-refresh
-            |  Connect to Arduino
-        .btn-group
-          a.btn(href="#")#elevator-up-btn
-            i.icon-arrow-up
-            |  Elevator Up
-          a.btn(href="#")#elevator-down-btn
-            i.icon-arrow-down
-            |  Elevator Down
-          a.btn(href="#")#elevator-jog-up-btn
-            i.icon-arrow-up
-            |  Elevator Jog Up
-          a.btn(href="#")#elevator-jog-down-btn
-            i.icon-arrow-down
-            |  Elevator Jog Down
-        .btn-group
-          a.btn(href="#")#platform-start-btn
-            i.icon-play
-            |  Platform Start
-          a.btn(href="#")#platform-stop-btn
-            i.icon-stop
-            |  Platform Stop
-        .btn-group
-          input.range#interval-slide(type="range", min="0", max="255", step="1", value="0")
+.container
+    header#overview
+        .page-header
+            h1 Controls
+    .interface#controls
+        .row.info#connection-status
+            .col-xs-6
+                .alert.alert-info Tap <strong>Connect</strong> to begin.
+                .alert.hide.alert-error
+                    i.fa.fa-times
+                        |  Could not connect
+                .alert.hide.alert-success
+                    i.fa.fa-check-circle
+                        |  Connected
+            .col-xs-6
+                a.btn.btn-large(href="#")#connect
+                    i.fa.fa-usb
+                    |  Connect
+        hr
+        .row
+            .col-xs-3
+                a.btn.btn-large(href="#")#elevator-up-btn
+                    i.fa.fa-angle-double-up
+                    |  Up
+            .col-xs-3
+                a.btn.btn-large(href="#")#elevator-down-btn
+                    i.fa.fa-angle-double-down
+                    |  Down
+            .col-xs-3
+                a.btn.btn-large(href="#")#elevator-jog-up-btn
+                    i.fa.fa-arrow-up
+                    |  Jog Up
+            .col-xs-3
+                a.btn.btn-large(href="#")#elevator-jog-down-btn
+                    i.fa.fa-arrow-down
+                    |  Jog Down
+        hr
+        .row
+            .col-xs-6
+                a.btn.btn-large(href="#")#platform-start-btn
+                    i.fa.fa-play
+                    |  Start
+            .col-xs-6
+                a.btn.btn-large(href="#")#platform-stop-btn
+                    i.fa.fa-stop
+                    |  Stop
 
-  .row.info#connection-status
-    .span12
-      .alert.alert-info Please connect to your Arduino using the button.
-      .alert.hide.alert-error Unable to connect to Arduino!
-      .alert.hide.alert-success Connection to Arduino established!
-  .row.debug
-    .span12
-      pre#connection-log
-        .item $ > Not connected to noduino!
-  .row
-    .span12
-      p This interface is defined in
-        code views/3d-scanner.jade
-        | , all needed JavaScript is stored in
-        code public/scripts/app.3d-scanner.js
-        |  using
-        a(href="http://requirejs.org/") RequireJS
-        |  for loading dependencies. Please see RequireJS's manual for loading your scripts. Logging is done with the customized
-        code Logger.HTML.js
-        |  in
-        code scripts/libs/
-        | .
+    hr
+
+    .row.debug
+        .col-xs-12
+            pre#connection-log
+                .item $ > Not connected to noduino!
