Tweaked button layout

--- a/views/3d-scanner.jade
+++ b/views/3d-scanner.jade
@@ -6,54 +6,50 @@
         .row.info#connection-status
             .col-xs-6
                 .alert.alert-info Tap <strong>Connect</strong> to begin.
-                .alert.hide.alert-error
+                .alert.hide.alert-danger
                     i.fa.fa-times
                         |  Could not connect
                 .alert.hide.alert-success
                     i.fa.fa-check-circle
                         |  Connected
             .col-xs-6
-                a.btn.btn-large(href="#")#connect
+                a.btn.btn-info.btn-lg(href="#")#connect
                     i.fa.fa-usb
                     |  Connect
         hr
         .row
             .col-xs-6
-                a.btn.btn-large(href="#")#elevator-home-btn
+                a.btn.btn-primary.btn-lg(href="#")#elevator-home-btn
+                    i.fa.fa-arrows-v &nbsp;
                     i.fa.fa-home
-                    |  Home
             .col-xs-6
-                a.btn.btn-large(href="#")#elevator-stop-btn
+                a.btn.btn-primary.btn-lg(href="#")#elevator-stop-btn
+                    i.fa.fa-arrows-v &nbsp;
                     i.fa.fa-stop
-                    |  El.Stop
         hr
         .row
             .col-xs-3
-                a.btn.btn-large(href="#")#elevator-up-btn
+                a.btn.btn-primary.btn-lg(href="#")#elevator-up-btn
                     i.fa.fa-angle-double-up
-                    |  Up
             .col-xs-3
-                a.btn.btn-large(href="#")#elevator-down-btn
+                a.btn.btn-primary.btn-lg(href="#")#elevator-down-btn
                     i.fa.fa-angle-double-down
-                    |  Down
             .col-xs-3
-                a.btn.btn-large(href="#")#elevator-jog-up-btn
-                    i.fa.fa-arrow-up
-                    |  Jog Up
+                a.btn.btn-primary.btn-lg(href="#")#elevator-jog-up-btn
+                    i.fa.fa-angle-up
             .col-xs-3
-                a.btn.btn-large(href="#")#elevator-jog-down-btn
-                    i.fa.fa-arrow-down
-                    |  Jog Down
+                a.btn.btn-primary.btn-lg(href="#")#elevator-jog-down-btn
+                    i.fa.fa-angle-down
         hr
         .row
             .col-xs-6
-                a.btn.btn-large(href="#")#platform-start-btn
+                a.btn.btn-info.btn-lg(href="#")#platform-start-btn
+                    i.fa.fa-rotate-right &nbsp;
                     i.fa.fa-play
-                    |  Start
             .col-xs-6
-                a.btn.btn-large(href="#")#platform-stop-btn
+                a.btn.btn-info.btn-lg(href="#")#platform-stop-btn
+                    i.fa.fa-rotate-right &nbsp;
                     i.fa.fa-stop
-                    |  Stop
 
     hr
 
