--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="bower_components/bootstrap/dist/css/bootstrap.min.css")
         link(rel="stylesheet", href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css")
+        link(rel="stylesheet", href="bower_components/font-awesome/css/font-awesome.min.css")
         link(rel="stylesheet", href="styles/main.css")
         script(type="text/javascript", src="//" + hostname + ":8090/socket.io/socket.io.js")
     body
